--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
         <h1>Exercises</h1>
         <ul>
             <li><a href="exercise1.html">Exercise 1</a></li>
-            <li>Exercise 2</li>
+            <li><a href="exercise2.html">Exercise 2</a></li>
             <li>Exercise 3</li>
             <li>Exercise 4</li>
             <li>Exercise 5</li>
