--- a/index.html
+++ b/index.html
@@ -4,20 +4,23 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>My individual Tasks - Eemeli Lehikoinen</title>
+    <link rel="stylesheet" href="css/style.css">
 </head>
 <body>
     <body>
+        <nav>
         <h1>Exercises</h1>
-        <ul>
+        <ul class="top-menu">
             <li><a href="exercise1.html">Exercise 1</a></li>
             <li><a href="exercise2.html">Exercise 2</a></li>
             <li>Exercise 3</li>
-            <li>Exercise 4</li>
+            <li><a href="exercise4.html">Exercise 4</a></li>
             <li>Exercise 5</li>
             <li>Exercise 6</li>
     
         
         </ul>
+    </nav>
     </body>
 
 </html>
