--- a/Exercises Folder/exercise4.html
+++ b/Exercises Folder/exercise4.html
@@ -5,6 +5,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="css/style.css">
     <title>Simple HTML Page</title>
+    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-T3c6CoIi6uLrA9TneNEoa7RxnatzjcDSCmG1MXxSR1GAsXEV/Dwwykc2MPK8M2HN" crossorigin="anonymous">
 </head>
 <body>
 
@@ -12,7 +13,7 @@
         <h1>Welcome to My Website</h1>
         <p>Your go-to place for interesting content.</p>
     </header>
-
+    
     <nav id="main-nav">
         <ul>
             <li><a href="#" class="nav-link">Home</a></li>
@@ -46,6 +47,6 @@
     <footer id="main-footer">
         <p>&copy; 2023 My Website. All rights reserved.</p>
     </footer>
-
+    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/js/bootstrap.bundle.min.js" integrity="sha384-C6RzsynM9kWDrMNeT87bh95OGNyZPhcTNXj1NW7RuBCsyN/o0jlpcV8Qyq46cDfL" crossorigin="anonymous"></script>
 </body>
 </html>
