--- a/index.html
+++ b/index.html
@@ -11,11 +11,11 @@
         <nav>
         <h1>Exercises</h1>
         <ul class="top-menu">
-            <li><a href="exercise1.html">Exercise 1</a></li>
-            <li><a href="exercise2.html">Exercise 2</a></li>
+            <li><a href="../Exercises Folder/exercise1.html">Exercise 1</a></li>
+            <li><a href="../Exercises Folder/exercise2.html">Exercise 2</a></li>
             <li>Exercise 3</li>
-            <li><a href="exercise4.html">Exercise 4</a></li>
-            <li><a href="exercise5.html">Exercise 5</a></li>
+            <li><a href="../Exercises Folder/exercise4.html">Exercise 4</a></li>
+            <li><a href="../Exercises Folder/exercise5.html">Exercise 5</a></li>
             <li>Exercise 6</li>
     
         
